button outside table

--- a/WebMarkupWebsiteOpdrachtP1/Contact_Page.html
+++ b/WebMarkupWebsiteOpdrachtP1/Contact_Page.html
@@ -79,11 +79,8 @@
                                 <td> <label for="message"> Bericht </label> </td>
                                 <td> <textarea id="message" name="message" rows="3" cols="20"> Bericht </textarea> </td>
                             </tr>
-
-                            <tr>
-                                <td> <input type="submit" id="submit" value="submit"> </td>
-                            </tr>
-                        </table>
+                        </table>                         
+                            <input type="submit" id="submit" value="submit">
                     </fieldset>
                     </form>
                 </article>
