--- a/WebMarkupWebsiteOpdrachtP1/index.html
+++ b/WebMarkupWebsiteOpdrachtP1/index.html
@@ -2,6 +2,7 @@
     <html>
         <head> 
             <!-- werk ik wel? -->
+             <!-- waarom ben ik hier 😔 -->
             <meta http-equiv="refresh" content="0; url=Home_Page.html">       
         </head>
     </html>
