--- a/WebMarkupWebsiteOpdrachtP1/Home_Page.html
+++ b/WebMarkupWebsiteOpdrachtP1/Home_Page.html
@@ -4,8 +4,8 @@
     <head>
         <meta charset="utf-8" />
         <meta author="Nhat Nguyen" />
-        <link rel="icon" type="image/x-icon" href="./img/favicon-32x32.ico">
-        <link rel="icon" type="image/x-icon" href="./img/favicon-16x16.ico">
+        <link rel="icon" type="image/ico" href="./img/favicon-32x32.ico">
+        <link rel="icon" type="image/ico" href="./img/favicon-16x16.ico">
         <link rel="stylesheet" href="./css/Home_Page.css" />
         <link rel="stylesheet" href="./css/MainStyleFile.css" />
     </head>
