--- a/WebMarkupWebsiteOpdrachtP1/Restaurants.html
+++ b/WebMarkupWebsiteOpdrachtP1/Restaurants.html
@@ -4,8 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <meta author="Nhat Nguyen" />
-        <link rel="icon" type="image/x-icon" href="./img/favicon-32x32.ico">
-        <link rel="icon" type="image/x-icon" href="./img/favicon-16x16.ico">
+        <link rel="icon" type="image/png" href="./img/favicon-16x16.png">
         <link rel="stylesheet" href="./css/Restaurants.css" />
         <link rel="stylesheet" href="./css\MainStyleFile.css" />
     </head>
