--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <DOCTYPE html!>
-   <html>
+    <html>
         <head> 
+            <!-- werk ik wel? -->
+             <!-- waarom ben ik hier 😔 -->
             <meta http-equiv="refresh" content="0; url=Home_Page.html">       
         </head>
     </html>
