--- a/History_And_Culture.html
+++ b/History_And_Culture.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <meta charset="utf-8">
+        <meta name="author" content="Nhat Nguyen">
+        <title> Geschiedenis en kultuur </title>
     </head>
     <body>
         
