--- a/Home_Page.html
+++ b/Home_Page.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <meta charset="utf-8">
+        <meta name="author" content="Nhat Nguyen">
+        <title> Home Pagina </title>
     </head>
     <body>
-        
+
     </body>
 </html>
