--- a/Restaurants.html
+++ b/Restaurants.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <meta charset="utf-8">
+        <meta name="author" content="Nhat Nguyen">
+        <title> Restaurants </title>
     </head>
     <body>
         
