github pages test/ css connect test

--- a/Home_Page.html
+++ b/Home_Page.html
@@ -4,8 +4,9 @@
         <meta charset="utf-8">
         <meta name="author" content="Nhat Nguyen">
         <title> Home Pagina </title>
+        <link rel="stylesheet" href="/css/Home_Page.css">
     </head>
     <body>
-
+        
     </body>
 </html>
