--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
-<!Doctype html>
+<!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta name="author" content="Nhat Nguyen">
+        <title> Home Pagina </title>
+        <link rel="stylesheet" href="/css/Home_Page.css">
     </head>
     <body>
-        <p> Github pages <p>
+        
     </body>
 </html>
