--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
         <meta name="author" content="Nhat Nguyen">
         <title> Home Pagina </title>
         <link rel="stylesheet" href="/css/Home_Page.css">
+        <link rel="stylesheet" href="/css/MainStyleFile.css">
     </head>
     <body>
-        
+        <p> dauabjdsbadsbgads </p>
     </body>
 </html>
