--- a/Contact_Page.html
+++ b/Contact_Page.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <meta name="author" content="Nhat Nguyen">
         <title> Contact pagina </title>
+        <link rel="stylesheet" href="/css/Contact_Page.css">
+        <link rel="stylesheet" href="/css/MainStyleFile.css">
     </head>
     <body>
         
