--- a/Events.html
+++ b/Events.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <meta name="author" content="Nhat Nguyen">
         <title> Jaarlijkse evenementen </title>
+        <link rel="stylesheet" href="/css/Events.css">
+        <link rel="stylesheet" href="/css/MainStyleFile.css">
     </head>
     <body>
         
