--- a/History_And_Culture.html
+++ b/History_And_Culture.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <meta name="author" content="Nhat Nguyen">
         <title> Geschiedenis en kultuur </title>
+        <link rel="stylesheet" href="/css/History_And_Culture.css">
+        <link rel="stylesheet" href="/css/MainStyleFile.css">
     </head>
     <body>
         
