--- a/Recreation.html
+++ b/Recreation.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <meta name="author" content="Nhat Nguyen">
         <title> Recreatie </title>
+        <link rel="stylesheet" href="/css/Recreation.css">
+        <link rel="stylesheet" href="/css/MainStyleFile.css">
     </head>
     <body>
         
