--- a/Restaurants.html
+++ b/Restaurants.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <meta name="author" content="Nhat Nguyen">
         <title> Restaurants </title>
+        <link rel="stylesheet" href="/css/Restaurants.css">
+        <link rel="stylesheet" href="/css/MainStyleFile.css">
     </head>
     <body>
         
