--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <title> Home Pagina </title>
         <link rel="stylesheet" href="/css/Home_Page.css">
         <link rel="stylesheet" href="/css/MainStyleFile.css">
+        <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-32x32.png">
+        <link rel="manifest" href="/site.webmanifest">
     </head>
     <body>
      
