header with img/ main and footer

--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
         <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-32x32.png">
         <link rel="manifest" href="/site.webmanifest">
     </head>
+
     <body>
-     
+        <!-- Header website, met nav bar -->
+        <header>
+            <img src="/img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website"/>
+
+        </header>
+        <main>
+
+        </main>
+        <footer>
+
+        </footer>
     </body>
 </html>
