--- a/index.html
+++ b/index.html
@@ -1,26 +1,38 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="author" content="Nhat Nguyen">
-        <title> Home Pagina </title>
-        <link rel="stylesheet" href="/css/Home_Page.css">
-        <link rel="stylesheet" href="/css/MainStyleFile.css">
-        <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-32x32.png">
-        <link rel="manifest" href="/site.webmanifest">
-    </head>
 
-    <body>
-        <!-- Header website, met nav bar -->
-        <header>
-            <img src="/img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website"/>
+<head>
+    <meta charset="utf-8">
+    <meta name="author" content="Nhat Nguyen">
+    <title> Home Pagina </title>
+    <link rel="stylesheet" href="/css/Home_Page.css">
+    <link rel="stylesheet" href="/css/MainStyleFile.css">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-32x32.png">
+    <link rel="manifest" href="/site.webmanifest">
+</head>
 
-        </header>
-        <main>
+<body>
+    <!-- Header website, met nav bar -->
+    <header>
+        <img src="/img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
+        <nav>
+            <ul>
+                <li> <a href="index.html"> Home </li>
+                <li> <a href="Restaurants.html"> Restaurants </li>
+                <li> <a href="History_And_Culture.html"> Kunst en Cultuur </li>
+                <li> <a href="Events.html"> Evenementen </li>
+                <li> <a href="Recreation.html"> Recreatie </li>
+                <li> <a href="Contact_Page.html"> Contact </li>
+            </ul>
+        </nav>
 
-        </main>
-        <footer>
+    </header>
+    <main>
 
-        </footer>
-    </body>
+    </main>
+    <footer>
+
+    </footer>
+</body>
+
 </html>
