--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <img src="/img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
         <nav>
             <ul>
-                <li> <a href="index.html"> Home </li>
-                <li> <a href="Restaurants.html"> Restaurants </li>
-                <li> <a href="History_And_Culture.html"> Kunst en Cultuur </li>
-                <li> <a href="Events.html"> Evenementen </li>
-                <li> <a href="Recreation.html"> Recreatie </li>
-                <li> <a href="Contact_Page.html"> Contact </li>
+                <li> <a href="index.html"> Home </a> </li>
+                <li> <a href="Restaurants.html"> Restaurants </a> </li>
+                <li> <a href="History_And_Culture.html"> Kunst en Cultuur </a> </li>
+                <li> <a href="Events.html"> Evenementen </a> </li>
+                <li> <a href="Recreation.html"> Recreatie </a> </li>
+                <li> <a href="Contact_Page.html"> Contact </a> </li>
             </ul>
         </nav>
 
