--- a/index.html
+++ b/index.html
@@ -30,8 +30,14 @@
     <main>
 
     </main>
-    <footer>
 
+    <footer>
+        <img src="/img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
+        <p> View Hoorn 2024 &copy; </p>
+        <ul>
+            <li> <a href="https://policies.google.com/privacy?hl=en-US"> Privacy policy </a> </li>
+            <li> <a href="Contact_Page.html"> Contact </a> </li>
+        </ul>
     </footer>
 </body>
 
