header and aside img

--- a/index.html
+++ b/index.html
@@ -12,21 +12,31 @@
 </head>
 
 <body>
-    <!-- Header website, met nav bar -->
-    <header>
+    <!-- nav bar -->
+    <nav>
         <img src="/img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
-        <nav>
-            <ul>
-                <li> <a href="index.html"> Home </a> </li>
-                <li> <a href="Restaurants.html"> Restaurants </a> </li>
-                <li> <a href="History_And_Culture.html"> Kunst en Cultuur </a> </li>
-                <li> <a href="Events.html"> Evenementen </a> </li>
-                <li> <a href="Recreation.html"> Recreatie </a> </li>
-                <li> <a href="Contact_Page.html"> Contact </a> </li>
-            </ul>
-        </nav>
-
+        <ul>
+            <li> <a href="index.html"> Home </a> </li>
+            <li> <a href="Restaurants.html"> Restaurants </a> </li>
+            <li> <a href="History_And_Culture.html"> Kunst en Cultuur </a> </li>
+            <li> <a href="Events.html"> Evenementen </a> </li>
+            <li> <a href="Recreation.html"> Recreatie </a> </li>
+            <li> <a href="Contact_Page.html"> Contact </a> </li>
+        </ul>
+    </nav>
+    <!-- header -->
+    <header>
+        <img src="/img/Hoorn-Hero-V2.jpg" alt="Afbeelding Haven hoorn" title="Grote afbeelding website">
     </header>
+    <!-- aside -->
+    <aside>
+        <img src="/img/De-Beijaard-Hoorn.jpg" alt="Afbeelding Restaurants" title="Restaurant de beijaard van buiten">
+        <img src="/img/Park-Schouwburg-Hoorn.jpg" alt="Afbeelding Kunst en Kultuur" title="park Schouwburg in de avond">
+        <img src="/img/Kermis-Hoorn.jpg" alt="Afbeelding Evenementen" title="Kermis Hoorn op de rodesteen">
+        <img src="/img/Sportcentrum-Hoorn.jpg" alt="Afbeelding Recreatie" title="Binnen in Sportcentrum Hoorn">
+    </aside>
+
+
     <main>
 
     </main>
