--- a/index.html
+++ b/index.html
@@ -25,19 +25,40 @@
         </ul>
     </nav>
     <!-- header -->
-    <header>
-        <img src="/img/Hoorn-Hero-V2.jpg" alt="Afbeelding Haven hoorn" title="Grote afbeelding website">
-    </header>
-    <!-- aside -->
-    <aside>
-        <img src="/img/De-Beijaard-Hoorn.jpg" alt="Afbeelding Restaurants" title="Restaurant de beijaard van buiten">
-        <img src="/img/Park-Schouwburg-Hoorn.jpg" alt="Afbeelding Kunst en Kultuur" title="park Schouwburg in de avond">
-        <img src="/img/Kermis-Hoorn.jpg" alt="Afbeelding Evenementen" title="Kermis Hoorn op de rodesteen">
-        <img src="/img/Sportcentrum-Hoorn.jpg" alt="Afbeelding Recreatie" title="Binnen in Sportcentrum Hoorn">
-    </aside>
+    <section>
+        <header>
+            <img src="/img/Hoorn-Hero-V2.jpg" alt="Afbeelding Haven hoorn" title="Grote afbeelding website">
+            <h1> View Hoorn</h1>
+            <h2> Bekijk wat je kan doen in Hoorn </h2>
+        </header>
+        <!-- aside -->
+        <aside>
+            <img src="/img/De-Beijaard-Hoorn.jpg" alt="Afbeelding Restaurants"
+                title="Restaurant de beijaard van buiten">
+            <img src="/img/Park-Schouwburg-Hoorn.jpg" alt="Afbeelding Kunst en Kultuur"
+                title="park Schouwburg in de avond">
+            <img src="/img/Kermis-Hoorn.jpg" alt="Afbeelding Evenementen" title="Kermis Hoorn op de rodesteen">
+            <img src="/img/Sportcentrum-Hoorn.jpg" alt="Afbeelding Recreatie" title="Binnen in Sportcentrum Hoorn">
+        </aside>
+    </section>
 
 
+    <!-- main -->
     <main>
+        <!-- article 1 -->
+        <article>
+            <section> 
+                <img src="/img/De-Beijaard-Hoorn.jpg" alt="Afbeelding Restaurants"
+                title="Restaurant de beijaard van buiten">
+            </section>
+            <section> 
+                <h5> Restaurant </h5>
+                <p> Ontdenk wat voor verschillende restaurants er in Hoorn te ontdekken zijn! </p>
+                <button> <a href="Recreation.html"> Lees meer </a> </button>
+            </section>
+
+        </article>
+
 
     </main>
 
