--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
                 title="Restaurant de beijaard van buiten">
             <img src="/img/Park-Schouwburg-Hoorn.jpg" alt="Afbeelding Kunst en Kultuur"
                 title="park Schouwburg in de avond">
-            <img src="/img/Kermis-Hoorn.jpg" alt="Afbeelding Evenementen" title="Kermis Hoorn op de rodesteen">
-            <img src="/img/Sportcentrum-Hoorn.jpg" alt="Afbeelding Recreatie" title="Binnen in Sportcentrum Hoorn">
+            <img src="/img/Kermis-Hoorn.jpg" alt="Afbeelding Evenementen" 
+                title="Kermis Hoorn op de rodesteen">
+            <img src="/img/Sportcentrum-Hoorn.jpg" alt="Afbeelding Recreatie" 
+                title="Binnen in Sportcentrum Hoorn">
         </aside>
     </section>
 
@@ -56,7 +58,46 @@
                 <p> Ontdenk wat voor verschillende restaurants er in Hoorn te ontdekken zijn! </p>
                 <button> <a href="Recreation.html"> Lees meer </a> </button>
             </section>
+        </article>
 
+          <!-- article 2 -->
+          <article>
+            <section> 
+                <img src="/img/Park-Schouwburg-Hoorn.jpg" alt="Afbeelding Kunst en Kultuur"
+                title="park Schouwburg in de avond">
+            </section>
+            <section> 
+                <h5> Kunst en Cultuur </h5>
+                <p> Bekijk kunstwerken in de verschillende Musea in Hoorn, of geniet van verschillende
+                    voorstellingen in theaters! </p>
+                <button> <a href="History_And_Culture.html"> Lees meer </a> </button>
+            </section>
+        </article>
+
+          <!-- article 3 -->
+          <article>
+            <section> 
+                <img src="/img/Kermis-Hoorn.jpg" alt="Afbeelding Evenementen" 
+                    title="Kermis Hoorn op de rodesteen">
+            </section>
+            <section> 
+                <h5> Evenementen </h5>
+                <p> Bekijk de jaarlijkse evenementen die in Hoorn gehouden worden! </p>
+                <button> <a href="Events.html"> Lees meer </a> </button>
+            </section>
+        </article>
+
+          <!-- article 4 -->
+          <article>
+            <section> 
+                <img src="/img/Sportcentrum-Hoorn.jpg" alt="Afbeelding Recreatie" 
+                    title="Binnen in Sportcentrum Hoorn">
+            </section>
+            <section> 
+                <h5> Recreatie </h5>
+                        <p> Bekijk wat voor recreatieve mogelijkheden er in Hoorn zijn! </p>
+                        <button> <a href="Recreation.html"> Lees meer </a> </button>
+            </section>
         </article>
 
 
