--- a/Contact_Page.html
+++ b/Contact_Page.html
@@ -9,6 +9,18 @@
         
     </head>
     <body>
+          <!-- nav bar -->
+    <nav>
+        <img src="/img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
+        <ul>
+            <li> <a href="index.html"> Home </a> </li>
+            <li> <a href="Restaurants.html"> Restaurants </a> </li>
+            <li> <a href="History_And_Culture.html"> Kunst en Cultuur </a> </li>
+            <li> <a href="Events.html"> Evenementen </a> </li>
+            <li> <a href="Recreation.html"> Recreatie </a> </li>
+            <li> <a href="Contact_Page.html"> Contact </a> </li>
+        </ul>
+    </nav>
         
     </body>
 </html>
