basic structure content pages

--- a/Events.html
+++ b/Events.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="author" content="Nhat Nguyen">
-        <title> Jaarlijkse evenementen </title>
-        <link rel="stylesheet" href="/css/Events.css">
-        <link rel="stylesheet" href="/css/MainStyleFile.css">
-    </head>
-    <body>
-          <!-- nav bar -->
+
+<head>
+    <meta charset="utf-8">
+    <meta name="author" content="Nhat Nguyen">
+    <title> Jaarlijkse evenementen </title>
+    <link rel="stylesheet" href="/css/Events.css">
+    <link rel="stylesheet" href="/css/MainStyleFile.css">
+</head>
+
+<body>
+    <!-- nav bar -->
     <nav>
         <img src="/img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
         <ul>
@@ -20,6 +22,61 @@
             <li> <a href="Contact_Page.html"> Contact </a> </li>
         </ul>
     </nav>
-        
-    </body>
+
+    <main>
+        <section>
+            <!-- block 1 -->
+            <article>
+                <section>
+
+                </section>
+                <section>
+
+                </section>
+            </article>
+
+            <!-- block 2 -->
+            <article>
+                <section>
+
+                </section>
+                <section>
+
+                </section>
+            </article>
+
+            <!-- block 3 -->
+            <article>
+                <section>
+
+                </section>
+                <section>
+
+                </section>
+            </article>
+
+            <!-- block 4 -->
+            <article>
+                <section>
+
+                </section>
+                <section>
+
+                </section>
+            </article>
+
+        </section>
+    </main>
+
+    <!-- footer -->
+    <footer>
+        <img src="/img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
+        <p> View Hoorn 2024 &copy; </p>
+        <ul>
+            <li> <a href="https://policies.google.com/privacy?hl=en-US"> Privacy policy </a> </li>
+            <li> <a href="Contact_Page.html"> Contact </a> </li>
+        </ul>
+    </footer>
+</body>
+
 </html>
