article 1 content page test

--- a/Restaurants.html
+++ b/Restaurants.html
@@ -25,13 +25,17 @@
 
     <main>
         <section>
+
             <!-- block 1 -->
             <article>
                 <section>
-
+                    <img src="/img/De-Beijaard-Hoorn.jpg" alt="Afbeelding Restaurants"
+                        title="Restaurant de beijaard van buiten">
                 </section>
                 <section>
-
+                    <h3> De Beijaard </h3>
+                    <p> Test ketst </p>
+                    <button> <a href="https://debeiaard-hoorn.nl/"> Bezoek website </a> </button>
                 </section>
             </article>
 
