content articles structure

--- a/History_And_Culture.html
+++ b/History_And_Culture.html
@@ -25,44 +25,56 @@
 
     <main>
         <section>
-            
-            <!-- block 1 -->
-            <article>
-                <section>
 
+             <!-- block 1 -->
+             <article>
+                <section>
+                    <img src="" alt=""
+                    title="">
                 </section>
                 <section>
-
+                    <h3> </h3>
+                    <p> Test ketst </p>
+                    <button> <a href=""> Bezoek website </a> </button>
                 </section>
             </article>
 
             <!-- block 2 -->
             <article>
                 <section>
-
+                    <h3> </h3>
+                    <p> Test ketst </p>
+                    <button> <a href=""> Bezoek website </a> </button>
                 </section>
-                <section>
-
+                <section>   
+                    <img src="" alt=""
+                    title="">
                 </section>
             </article>
 
             <!-- block 3 -->
             <article>
                 <section>
-
+                    <img src="" alt=""
+                    title="">
                 </section>
                 <section>
-
+                    <h3> </h3>
+                    <p> Test ketst </p>
+                    <button> <a href=""> Bezoek website </a> </button>
                 </section>
             </article>
 
             <!-- block 4 -->
             <article>
                 <section>
-
+                    <h3> </h3>
+                    <p> Test ketst </p>
+                    <button> <a href=""> Bezoek website </a> </button>
                 </section>
-                <section>
-
+                <section>   
+                    <img src="" alt=""
+                    title="">
                 </section>
             </article>
 
