detail page 1 articles + content

--- a/Restaurants.html
+++ b/Restaurants.html
@@ -29,12 +29,18 @@
             <!-- block 1 -->
             <article>
                 <section>
-                    <img src="/img/De-Beijaard-Hoorn.jpg" alt="Afbeelding Restaurants"
+                    <img src="/img/De-Beijaard-Hoorn.jpg" alt="Afbeelding van de buitenkant van De Beijaard"
                         title="Restaurant de beijaard van buiten">
                 </section>
                 <section>
                     <h3> De Beijaard </h3>
-                    <p> Test ketst </p>
+                    <p> De Beiaard is een “eet- en bierencafé” aan het Kerkplein in Hoorn. Het is een gezellige plek
+                        die bekend staat om zijn uitgebreide selectie speciaalbieren en heerlijke gerechten.
+                        Bezoekers waarderen de ontspannen sfeer, waar je zowel kunt genieten van een informele
+                        maaltijd als een borrel met vrienden. De combinatie van goede service, smaakvolle gerechten
+                        en een uitnodigende ambiance maakt De Beiaard tot een populaire ontmoetingsplaats in het
+                        hart van de stad. 
+                    </p>
                     <button> <a href="https://debeiaard-hoorn.nl/"> Bezoek website </a> </button>
                 </section>
             </article>
@@ -42,39 +48,56 @@
             <!-- block 2 -->
             <article>
                 <section>
-                    <h3> </h3>
-                    <p> Test ketst </p>
-                    <button> <a href=""> Bezoek website </a> </button>
+                    <h3> Wok van Pejo </h3>
+                    <p> De Wok van Pejo is een populair wokrestaurant in de wijk Zwaag, binnen Hoorn. Het restaurant
+                        biedt een uitgebreide keuze aan gerechten, waaronder diverse voorgerechten, soepen,
+                        barbecue-opties, een sushi-bar, en een warm buffet. Dankzij dit brede aanbod is er voor elke
+                        smaak iets te vinden, waardoor het een ideale plek is voor zowel liefhebbers van Aziatische
+                        gerechten als voor gezinnen of groepen die van variatie houden. 
+                    </p>
+                    <button> <a href="https://www.wokvanpejo.nl/"> Bezoek website </a> </button>
                 </section>
                 <section>   
-                    <img src="" alt=""
-                    title="">
+                    <img src="/img/Wok-Van-Pejo-Zwaag.jpg" alt="Afbeelding binnen in Wok van Pejo"
+                    title="Ergens in de Wok van Pejo">
                 </section>
             </article>
 
             <!-- block 3 -->
             <article>
                 <section>
-                    <img src="" alt=""
-                    title="">
+                    <img src="/img/Portofino-Hoorn-2.jpg" alt="Afbeelding voorkant portofino met 2 eigenaren"
+                    title="eigenaren van portofino voor portofino">
                 </section>
                 <section>
-                    <h3> </h3>
-                    <p> Test ketst </p>
-                    <button> <a href=""> Bezoek website </a> </button>
+                    <h3> Portofino Hoorn </h3>
+                    <p> Portofino is een Italiaans familierestaurant aan de Nieuwlandstraat in het centrum van
+                        Hoorn. Hier zorgt een team van Nederlanders en Italianen voor menu's vol met authentieke
+                        Italiaanse gerechten. Van klassieke pasta's zoals Carbonara tot versgebakken Focaccia en
+                        heerlijke desserts zoals Torta Limone, er is voor iedere liefhebber van de Italiaanse keuken
+                        iets te vinden. Als je op zoek bent naar een plek om échte Italiaanse smaken te proeven, dan
+                        is Portofino de ideale bestemming! 
+                    </p>
+                    <button> <a href="https://www.portofinodapiero.nl"> Bezoek website </a> </button>
                 </section>
             </article>
 
             <!-- block 4 -->
             <article>
                 <section>
-                    <h3> </h3>
-                    <p> Test ketst </p>
-                    <button> <a href=""> Bezoek website </a> </button>
+                    <h3> Ridderrikhoff </h3>
+                    <p> Restaurant Ridderikhoff is een sfeervol restaurant aan het Kerkplein in het historische
+                        centrum van Hoorn. Het biedt een verfijnd menu met Franse en internationale gerechten,
+                        waarbij lokale en seizoensgebonden ingrediënten centraal staan. Of je nu komt voor een
+                        diner, lunch of culinaire proeverij, de gerechten worden met zorg bereid. Het elegante
+                        interieur en de intieme sfeer maken het perfect voor een romantisch diner of speciale
+                        gelegenheid, wat Ridderikhoff een waardevolle aanvulling maakt op het culinaire aanbod van
+                        Hoorn. </p>
+                    <button> <a href="https://ridderikhoff.org/"> Bezoek website </a> </button>
                 </section>
                 <section>   
-                    <img src="" alt=""
-                    title="">
+                    <img src="/img/Ridderikhoff-Hoorn.jpeg" alt="Buitenkant van restaurant Ridderrikhoff"
+                    title="De buitenkant van Ridderrikhoff">
                 </section>
             </article>
 
