content all detail pages

--- a/Events.html
+++ b/Events.html
@@ -29,26 +29,37 @@
              <!-- block 1 -->
              <article>
                 <section>
-                    <img src="" alt=""
-                    title="">
+                    <img src="/img/Jaarmarkt-Blokker.jpg" alt="Afbeelding jaarmarktblokker"
+                    title="verschillende kraampjes op straat in Blokker">
                 </section>
                 <section>
-                    <h3> </h3>
-                    <p> Test ketst </p>
-                    <button> <a href=""> Bezoek website </a> </button>
+                    <h3> Jaarmarkt Blokker </h3>
+                    <p> Elk jaar is er op de laatste zaterdag van augustus een jaarmarkt in Blokker. Op de jaarmarkt
+                        is een diversie aanbod aan verschillende producten en diensten op de maarliefts 200
+                        verschillende kramen. Op de jaarmarkt is er ook een jeugdrommelmarkt, een brandweer
+                        demonstratie, pony rijden, ballon kunstenaar, springkussen draaimolen en nog meer! Dus er is
+                        altijd wel iets te doen voor jong en oud.
+                    </p>
+                    <button> <a href="https://www.jaarmarktblokker.nl/"> Bezoek website </a> </button>
                 </section>
             </article>
 
             <!-- block 2 -->
             <article>
                 <section>
-                    <h3> </h3>
-                    <p> Test ketst </p>
-                    <button> <a href=""> Bezoek website </a> </button>
+                    <h3> Kermis Hoorn </h3>
+                    <p> Elkjaar is er in Hoorn een kermis. Dit jaar van zaterdag 10 augustus tot en met maandag 19
+                        augustus is de 578 editie van kermis Hoorn terug met 71
+                        verschillende de attracties. De kermis kan je in de binnenstad van hoorn vinden op de
+                        volgende straten/plekken: Vale Hen (1-11), Breed (12-28), Gedempte Turfhaven (29-43),
+                        Spoorstraat (44-46), Ramen (47), Niewland (48), Gouw(49-57), Nieuwstraat (58-64), Kerkplein
+                        (65-68) en De rode steen (69-71).
+                    </p>
+                    <button> <a href="https://www.kermis-hoorn.nl/"> Bezoek website </a> </button>
                 </section>
                 <section>   
-                    <img src="" alt=""
-                    title="">
+                    <img src="/img/Kermis-Hoorn.jpg" alt="Afbeelding van kermis Hoorn"
+                    title="attracties op de rode steen">
                 </section>
             </article>
 
@@ -68,13 +79,18 @@
             <!-- block 4 -->
             <article>
                 <section>
-                    <h3> </h3>
-                    <p> Test ketst </p>
-                    <button> <a href=""> Bezoek website </a> </button>
+                    <h3> Live in Hoorn </h3>
+                    <p> Live in Hoorn is een muzikaal feest dat sinds 2007 onregelmatig wordt gehouden. Het
+                        evenement brengt lokale en regionale artiesten samen, waardoor bezoekers kunnen genieten van
+                        een gevarieerd aanbod aan live muziek, van pop en rock tot jazz. Met een gezellige sfeer is
+                        Live in Hoorn uitgegroeid tot een geliefde gebeurtenis voor muziekliefhebbers en een
+                        levendige ontmoetingsplaats voor de gemeenschap.
+                    </p>
+                    <button> <a href="https://www.liveinhoorn.nl/"> Bezoek website </a> </button>
                 </section>
                 <section>   
-                    <img src="" alt=""
-                    title="">
+                    <img src="/img/Live-In-Hoorn.jpg" alt="Afbeelding live in Hoorn"
+                    title="Podium live in Hoorn met publiek">
                 </section>
             </article>
 
