--- a/History_And_Culture.html
+++ b/History_And_Culture.html
@@ -29,52 +29,75 @@
              <!-- block 1 -->
              <article>
                 <section>
-                    <img src="" alt=""
-                    title="">
+                    <img src="/img/Westfries-Museum-Hoorn.jpg" alt="Afbeelding voorkant westvries museum"
+                    title="De voorkant van het WestFries Museum">
                 </section>
                 <section>
-                    <h3> </h3>
-                    <p> Test ketst </p>
-                    <button> <a href=""> Bezoek website </a> </button>
+                    <h3> Het WestFries Museum </h3>
+                    <p> Het WestFries museum is een museum aan het plein “De rode steen” in het centrum van Hoorn.
+                        In het WestFries museum kan over de interesante geschiedenis lezen en zien van de stad Hoorn
+                        en WestFriesland. Dat kan mede door geweldige mulimediashows, verdiepende podwalks en nog
+                        meer. Dit jaar (2024) kan je tussen 22 juni t/m 3 november meer dan 200 orginele etsen van
+                        Rembrandt. Ben je een Rembrandt liefhebber? Mis deze kans dan niet!
+                    </p>
+                    <button> <a href="https://westfriesmuseum.nl/"> Bezoek website </a> </button>
                 </section>
             </article>
 
             <!-- block 2 -->
             <article>
                 <section>
-                    <h3> </h3>
-                    <p> Test ketst </p>
-                    <button> <a href=""> Bezoek website </a> </button>
+                    <h3> Park Schouwburg </h3>
+                    <p> Schouwburg Het Park, ook bekend als Park Schouwburg, is een theater gelegen aan de Hoornse
+                        Hop in Hoorn. Het biedt een breed scala aan voorstellingen, zoals toneel, musicals, cabaret,
+                        dans en concerten, en trekt hiermee een divers publiek. Naast voorstellingen worden er ook
+                        regelmatig evenementen en congressen georganiseerd. Met zijn moderne uitstraling en
+                        uitstekende faciliteiten is het een geliefde plek voor culturele activiteiten en speelt het
+                        een belangrijke rol in het culturele leven van Hoorn en omgeving.
+                    </p>
+                    <button> <a href="https://www.hetpark.nl/"> Bezoek website </a> </button>
                 </section>
                 <section>   
-                    <img src="" alt=""
-                    title="">
+                    <img src="/img/Park-Schouwburg-Hoorn.jpg" alt="Afbeelding Park Schouwburg"
+                    title="Park Schouwburg in de avond">
                 </section>
             </article>
 
             <!-- block 3 -->
             <article>
                 <section>
-                    <img src="" alt=""
-                    title="">
+                    <img src="/img/Museum-Van-De-20-Eeuw-Hoorn.webp" alt="Afbeelding Museum van de 20ste eeuw"
+                    title="Het museum van de 20ste eeuw vanaf een van de ingangen">
                 </section>
                 <section>
-                    <h3> </h3>
-                    <p> Test ketst </p>
-                    <button> <a href=""> Bezoek website </a> </button>
+                    <h3> Museum van de 20e Eeuw </h3>
+                    <p> Het museum van de 20e Eeuw is een museum die in een voormalige gevangenis in de haven van
+                        Hoorn zit. In het museum kan je zien hoe het leven in de 20ste eeuw uitziet, van oude
+                        interieurs van huizen, voorwerpen van vroeger en nog meer. Bekijk eens hoe een klaslokaal
+                        van vroeger eruit ziet en wat voor voorwerpen zoals speelgoed ze vroeger hadden. Bekijk het
+                        leven van vroeger, de armoede, het lang werken en hoe de woonomstandigheid van vroeger is
+                        veranderd vergeleken met nu.
+                    </p>
+                    <button> <a href="https://www.museumhoorn.nl/pg-5548-7-7378/pagina/welkom.html"> Bezoek website </a> </button>
                 </section>
             </article>
 
             <!-- block 4 -->
             <article>
                 <section>
-                    <h3> </h3>
-                    <p> Test ketst </p>
-                    <button> <a href=""> Bezoek website </a> </button>
+                    <h3> De Halve Maen </h3>
+                    <p> De Halve Maen is een replica van een 17e-eeuws VOC-schip (Verenigde Oostindische Compagnie),
+                        gelegen in de haven van Hoorn. Het varende museum biedt bezoekers de kans om terug in de
+                        tijd te gaan en de maritieme geschiedenis van Nederland te ontdekken. Aan boord leren zij
+                        over de belangrijke rol van de VOC tijdens de Gouden Eeuw en het zware leven van zeelieden
+                        op lange, gevaarlijke reizen. De Halve Maen fungeert zo als een levend stuk erfgoed en een
+                        herinnering aan Hoorns rijke verleden.
+                    </p>
+                    <button> <a href="https://halvemaen.nl/"> Bezoek website </a> </button>
                 </section>
                 <section>   
-                    <img src="" alt=""
-                    title="">
+                    <img src="/img/De-Halve-Maen-Hoorn.jpg" alt="Afbeelding van de halve maen"
+                    title="De halve maen aan de kade">
                 </section>
             </article>
 
