--- a/Recreation.html
+++ b/Recreation.html
@@ -29,52 +29,76 @@
             <!-- block 1 -->
             <article>
                 <section>
-                    <img src="" alt=""
-                    title="">
+                    <img src="/img/Vue-Hoorn.jpg" alt="Afbeelding ingang Vue Hoorn"
+                    title="De ingang van Vue Hoorn">
                 </section>
                 <section>
-                    <h3> </h3>
-                    <p> Test ketst </p>
-                    <button> <a href=""> Bezoek website </a> </button>
+                    <h3> Vue Hoorn </h3>
+                        <p> Heb je zin om films op het grote scherm te bekijken? Dan is Vue Hoorn de ideale plek voor
+                            jou! Gelegen naast de A7, aan de rand van Hoorn, en direct naast het Van der Valk Hotel, kun
+                            je hier de nieuwste blockbusters beleven. De bioscoop biedt zowel 2D- als 3D-voorstellingen,
+                            waardoor je kunt genieten van films met indrukwekkende beelden en een geweldige sfeer. Met
+                            comfortabele zitplaatsen en moderne technologie is Vue Hoorn dé plek voor een complete
+                            filmervaring.
+                        </p>
+                        <button> <a href="https://www.vuecinemas.nl/vue-cinemas/hoorn"> Bezoek website </a> </button>
                 </section>
             </article>
 
             <!-- block 2 -->
             <article>
                 <section>
-                    <h3> </h3>
-                    <p> Test ketst </p>
-                    <button> <a href=""> Bezoek website </a> </button>
+                    <h3> De Waterhoorn </h3>
+                    <p> Heeft u zin om te gaan zwemmen, maar wilt u niet wachten tot het warmer wordt? Dan is de
+                        Waterhoorn de perfecte plek voor u! Dit overdekte zwembad in Hoorn biedt het hele jaar door
+                        de mogelijkheid om te zwemmen in een comfortabele omgeving. Met verschillende zwembaden,
+                        glijbanen en wellnessfaciliteiten is de Waterhoorn ideaal voor gezinnen, zwemliefhebbers en
+                        iedereen die wil genieten van een verfrissende duik, ongeacht het seizoen.
+                    </p>
+                    <button> <a href="https://www.optisport.nl/zwembad-de-waterhoorn-hoorn"> Bezoek website </a> </button>
                 </section>
                 <section>   
-                    <img src="" alt=""
-                    title="">
+                    <img src="/img/De-Water-Hoorn.jpg" alt="Afbeelding binnenkant Water Hoorn"
+                    title="Een van de binnenzwembaden">
                 </section>
             </article>
-            
+
             <!-- block 3 -->
             <article>
                 <section>
-                    <img src="" alt=""
-                    title="">
+                    <img src="/img/Sportcentrum-Hoorn.jpg" alt="Afbeelding binnenkant sportcentrum Hoorn"
+                    title="Een van de binnen velden">
                 </section>
                 <section>
-                    <h3> </h3>
-                    <p> Test ketst </p>
-                    <button> <a href=""> Bezoek website </a> </button>
+                    <h3> Sportcentrum Hoorn </h3>
+                    <p> Sportcentrum Hoorn is een sportcentrum aan de Holenweg 14a in Hoorn. Het centrum biedt een
+                        breed scala aan sportfaciliteiten, zoals fitness, groepslessen, squashbanen en een sauna.
+                        Zowel beginners als ervaren sporters kunnen hier terecht voor een gevarieerd aanbod aan
+                        activiteiten. Met moderne apparatuur en deskundige begeleiding is Sportcentrum Hoorn de
+                        ideale plek voor iedereen die aan zijn conditie wil werken of wil ontspannen na een
+                        intensieve training.
+                    </p>
+                    <button> <a href="https://sportcentrumhoorn.nl/#/"> Bezoek website </a> </button>
                 </section>
             </article>
 
             <!-- block 4 -->
             <article>
                 <section>
-                    <h3> </h3>
-                    <p> Test ketst </p>
-                    <button> <a href=""> Bezoek website </a> </button>
+                    <h3> Sam city </h3>
+                    <p> Sam city is een groot indoor sport- en recreatiecentrum in Hoorn, gelegen aan de
+                        Westfrisiaweg. Het biedt een breed scala aan activiteiten voor alle leeftijden, zoals
+                        trampolinespringen, karten, lasergamen en een klimbaan. Het is de perfecte plek voor wie op
+                        zoek is naar avontuur en actie, of het nu gaat om een kinderfeestje, een sportieve dag met
+                        vrienden of familie-uitje. Met verschillende zones en professionele begeleiding is er voor
+                        iedereen wel iets te beleven in Sam City. Het centrum staat bekend om zijn dynamische sfeer
+                        en biedt een onvergetelijke ervaring voor jong en oud.
+                    </p>
+                    <button> <a href="https://samcity.nl/"> Bezoek website </a> </button>
                 </section>
                 <section>   
-                    <img src="" alt=""
-                    title="">
+                    <img src="/img/Samcity-Hoorn.jpeg" alt="Afbeelding buitenkant sam city"
+                    title="Het bebouw waarin samcity zit">
                 </section>
             </article>
         </section>
