--- a/Contact_Page.html
+++ b/Contact_Page.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="author" content="Nhat Nguyen">
-        <title> Contact pagina </title>
-        <link rel="stylesheet" href="/css/Contact_Page.css">
-        <link rel="stylesheet" href="/css/MainStyleFile.css">
-        
-    </head>
-    <body>
-          <!-- nav bar -->
+
+<head>
+    <meta charset="utf-8">
+    <meta name="author" content="Nhat Nguyen">
+    <title> Contact pagina </title>
+    <link rel="stylesheet" href="/css/Contact_Page.css">
+    <link rel="stylesheet" href="/css/MainStyleFile.css">
+
+</head>
+
+<body>
+    <!-- nav bar -->
     <nav>
         <img src="/img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
         <ul>
@@ -21,6 +23,62 @@
             <li> <a href="Contact_Page.html"> Contact </a> </li>
         </ul>
     </nav>
-        
-    </body>
+
+    <main>
+        <article>
+
+            <p> <em> Velden met een <strong> * </strong> zijn verplicht </em> </p>
+            <form>
+                <fieldset>
+                    <legend> Contact Form </legend>
+                    <table>
+                        <tr>
+                            <td><label for="salutation"> Aanhef <strong>*</strong></label></td>
+                            <td>
+                                <select>
+                                    <option value="Dhr">Dhr</option>
+                                    <option value="Mevr">Mevr</option>
+                                    <option value="Nothing">Wil ik niet zeggen</option>
+                                </select>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td> <label for="infix"> Tussen Voegsel </label> </td>
+                            <td> <input type="text" id="infix" name="infix" value="Tussen Voegsel"> </td>
+                        </tr>
+
+                        <tr>
+                            <td> <label for="name"> Naam <strong> * </strong> </label> </td>
+                            <td> <input type="text" id="Fname" name="Fname" value="Naam"> </td>
+                        </tr>
+
+                        <tr>
+                            <td> <label for="name"> Achter Naam <strong> * </strong> </label> </td>
+                            <td> <input type="text" id="Lname" name="Lname" value="Achter Naam"> </td>
+                        </tr>
+
+                        <tr>
+                            <td> <label for="email"> Email <strong> * </strong> </label> </td>
+                            <td> <input type="email" id="email" name="email" value="Naam@email.com"> </td>
+                        </tr>
+
+                        <tr>
+                            <td> <label for="name"> Telefoon Nummer </label> </td>
+                            <td> <input type="number" id="pnumber" name="pnumber" value="1234567890"> </td>
+                        </tr>
+
+                        <tr>
+                            <td> <label for="message"> Bericht </label> </td>
+                            <td> <textarea id="message" name="message" rows="3" cols="20"> Bericht </textarea> </td>
+                        </tr>
+                    </table>
+                    <input type="submit" id="submit" value="submit">
+                </fieldset>
+            </form>
+        </article>
+    </main>
+
+</body>
+
 </html>
