--- a/History_And_Culture.html
+++ b/History_And_Culture.html
@@ -7,6 +7,7 @@
     <title> Geschiedenis en kultuur </title>
     <link rel="stylesheet" href="/css/History_And_Culture.css">
     <link rel="stylesheet" href="/css/MainStyleFile.css">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-32x32.png">
 </head>
 
 <body>
