--- a/Contact_Page.html
+++ b/Contact_Page.html
@@ -7,6 +7,7 @@
     <title> Contact pagina </title>
     <link rel="stylesheet" href="/css/Contact_Page.css">
     <link rel="stylesheet" href="/css/MainStyleFile.css">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-32x32.png">
 
 </head>
 
