--- a/Events.html
+++ b/Events.html
@@ -7,6 +7,7 @@
     <title> Jaarlijkse evenementen </title>
     <link rel="stylesheet" href="/css/Events.css">
     <link rel="stylesheet" href="/css/MainStyleFile.css">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-32x32.png">
 </head>
 
 <body>
