--- a/Recreation.html
+++ b/Recreation.html
@@ -7,6 +7,7 @@
     <title> Recreatie </title>
     <link rel="stylesheet" href="/css/Recreation.css">
     <link rel="stylesheet" href="/css/MainStyleFile.css">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-32x32.png">
 </head>
 
 <body>
