--- a/Contact_Page.html
+++ b/Contact_Page.html
@@ -26,8 +26,8 @@
     </nav>
 
     <main>
+        <section>
         <article>
-
             <p> <em> Velden met een <strong> * </strong> zijn verplicht </em> </p>
             <form>
                 <fieldset>
@@ -78,6 +78,7 @@
                 </fieldset>
             </form>
         </article>
+    </section>
     </main>
 
      <!-- footer -->
