--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
         <!-- article 4 -->
         <article>
             <section>
+                <figure>
                 <img src="/img/Sportcentrum-Hoorn.jpg" alt="Afbeelding Recreatie" title="Binnen in Sportcentrum Hoorn">
+                <figcaption> Recreatie </figcaption>
+            </figure>
             </section>
             <section>
                 <h5> Recreatie </h5>
